--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 			<id>test</id>
 			<properties>
 				<apigee.profile>test</apigee.profile>
-				<apigee.env>dev</apigee.env>
+				<apigee.env>test</apigee.env>
 				<apigee.hosturl>https://api.enterprise.apigee.com</apigee.hosturl>
 				<apigee.apiversion>v1</apigee.apiversion> <!-- value of version in  https://api.enterprise.apigee.com/v2 -->
 				<apigee.org>svikaas</apigee.org>
@@ -58,7 +58,7 @@
 				<apigee.org>svikaas</apigee.org>
 				<apigee.username>${username}</apigee.username>
 				<apigee.password>${password}</apigee.password>
-				<apigee.options>override</apigee.options>
+				<apigee.options>update</apigee.options>
 			</properties>
 		</profile>
     </profiles>
