--- a/pom.xml
+++ b/pom.xml
@@ -171,8 +171,7 @@
 					</execution>
 				</executions>
 			</plugin>
-
-			<!--plugin>
+			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
 				<version>1.3.2</version>
@@ -192,13 +191,12 @@
 							</environmentVariables>
 							<executable>cucumber-js</executable>
 							<commandlineArgs>
-								test/integration.${apigee.env}
+								test/integration
 							</commandlineArgs>
 						</configuration>
 					</execution>
 				</executions>
-			</plugin-->
-
+			</plugin>
 		</plugins>
 	</build>
 </project>
